--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Pushparaj",
-    "short_name": "Pushparaj",
+    "name": "Hamza",
+    "short_name": "Hamza",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#000000",
